--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=messenger
+
+# Database settings
+spring.datasource.url=jdbc:postgresql://46.8.230.15:5432/postgres
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.database=messenger
+spring.jpa.properties.hibernate.default_schema: messenger
+
+# Base URLs for some endpoints
+user_base_url="/user"
