--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.password=
 spring.datasource.database=messenger
 spring.jpa.properties.hibernate.default_schema: messenger
 
+# Timezone
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
 # Base URLs for some endpoints
 user_base_url="/user"
