--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 springdoc.api-docs.path=/api-docs
 
 # Base URLs for some endpoints
-user_base_url="/user"
-chat_base_url="/chat"
+user_base_url=/user
+chat_base_url=/chat
