--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ springdoc.api-docs.path=/api-docs
 # Base URLs for some endpoints
 user_base_url=/user
 chat_base_url=/chat
+chat_member_base_url=/chat_member
