--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ springdoc.api-docs.path=/api-docs
 user_base_url=/user
 chat_base_url=/chat
 chat_member_base_url=/chat_member
+content_base_url=/content
+message_base_url=/message
