--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=messenger
 
 # Database settings
 spring.datasource.url=jdbc:postgresql://46.8.230.15:5432/postgres
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=superpuper
 spring.datasource.database=messenger
 spring.jpa.properties.hibernate.default_schema: messenger
 
