add contacts get logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ chat_base_url=/chat
 chat_member_base_url=/chat_member
 content_base_url=/content
 message_base_url=/message
+contact_base_url=/contact
