--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=messenger
-
+server.port=8081
 # Database settings
 spring.datasource.url=jdbc:postgresql://46.8.230.15:5432/postgres
 spring.datasource.username=postgres
