--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.default_schema: messenger
 # Timezone
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+server.port = 8081
 # API docs path. Swagger UI docs can be viewed at path http://localhost:8080/swagger-ui/index.html
 springdoc.api-docs.path=/api-docs
 
