settings supposed to work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ chat_member_base_url=/chat_member
 content_base_url=/content
 message_base_url=/message
 contact_base_url=/contact
+settings_base_url=/settings
